--- a/vm/Cargo.toml
+++ b/vm/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "vc2-vm"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.20"
