--- a/inspector/Cargo.toml
+++ b/inspector/Cargo.toml
@@ -1,9 +1,16 @@
 [package]
 name = "vc2-inspector"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sdl2 = { version = "0.35.2", optional = true }
+simple_logger = "4.2.0"
 vc2-vm = { path = "../vm" }
+
+[features]
+default = ["video", "keyboard"]
+video = ["dep:sdl2"]
+keyboard = ["dep:sdl2"]
