--- a/inspector/Cargo.toml
+++ b/inspector/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "vc2-inspector"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gumdrop = "0.8.1"
+log = "0.4.20"
 sdl2 = { version = "0.35.2", optional = true }
 simple_logger = "4.2.0"
 vc2-vm = { path = "../vm" }
